Updating the pixel label

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
         <h3>It’s here, Jon... somewhere.</h3>
       </div>
     </main>
-    <div id="the_pixel" class="the-pixel"><span class="the-pixel--pointer">‹</span> the pixel</div>
+    <div id="the_pixel" class="the-pixel" tabindex="0"><span class="the-pixel--pointer">‹</span> the pixel</div>
   </body>
 </html>
