Fine-tuning the troll

--- a/index.html
+++ b/index.html
@@ -77,13 +77,18 @@
     </script>
   </head>
   <body>
-    <main>
-      <div class="hgroup">
-        <h1>“There’s always <strong>one annoying pixel</strong> that I just obsess over”</h1>
-        <h2>— Jon Setzen, Future of Web Design London, 2014</h2>
-        <h3>It’s here, Jon... somewhere.</h3>
-      </div>
-    </main>
+    <div class="page">
+      <main>
+        <div class="hgroup">
+          <h1>“There’s always <strong>one annoying pixel</strong> that I just obsess over”</h1>
+          <h2>— Jon Setzen, Future of Web Design London, 2014</h2>
+          <h3>It’s here, Jon... somewhere.</h3>
+        </div>
+      </main>
+      <footer>
+        <p>Made by <a href="https://twitter.com/jpamental">Jason Pamental</a> just to troll <a href="https://twitter.com/jonsetzen">Jon Setzen</a> about a line in a talk that made me laugh. It only took seven years to get around to making it. <a href="https://github.com/jpamental/oneannoyingpixel">Source on GitHub</a> & <a href="https://www.netlify.com/">hosted on Netlify</a></p>
+      </footer>
+    </div>
     <div id="the_pixel" class="the-pixel" tabindex="0"><span class="the-pixel--pointer">‹</span> the pixel</div>
   </body>
 </html>
