Fiddling with bits

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
 		<meta property="og:title" content="One Annoying Pixel">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
-    <link rel="manifest" href="assets/images/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/site.webmanifest">
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="assets/js/scripts.js"></script>
     <script src="assets/js/fontfaceobserver.js"></script>
     <script type="text/javascript">
 				const cookies = document.cookie.split(';');
@@ -87,8 +86,9 @@
       </main>
       <div id="the_pixel" class="the-pixel" tabindex="0"><span class="the-pixel--pointer">‹</span> the pixel</div>
       <footer>
-        <p>Made by <a href="https://twitter.com/jpamental">Jason Pamental</a> just to troll <a href="https://twitter.com/jonsetzen">Jon Setzen</a> about a line in a talk that made me laugh. It only took seven years to get around to making it. <a href="https://github.com/jpamental/oneannoyingpixel">Source on GitHub</a> & <a href="https://www.netlify.com/">hosted on Netlify</a></p>
+        <p>Made by <a href="https://twitter.com/jpamental">Jason Pamental</a> just to troll <a href="https://twitter.com/jonsetzen">Jon Setzen</a> about a line in a talk that made me laugh. It only took seven years to get around to making it. <a href="https://github.com/jpamental/oneannoyingpixel">Source on GitHub</a> & <a href="https://www.netlify.com/">hosted on Netlify</a>. <span class="show-pixel"><a href="#" id="pixelfinder" class="pixelfinder">Find the pixel</a></span></p>
       </footer>
     </div>
+    <script src="assets/js/scripts.js"></script>
   </body>
 </html>
